--- a/orthopaedic.html
+++ b/orthopaedic.html
@@ -132,22 +132,7 @@
         </div>
     </section>
 
-    <!-- 5. Revision Joint Replacement -->
-    <section class="ortho-box">
-        <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
-        </div>
-        <div class="ortho-content">
-            <h3>Revision Joint Replacement</h3>
-            <p>
-                Revision surgery is performed when a previous joint replacement becomes loose, infected or worn-out.
-                The old implant is removed and replaced with a new, stronger one. Requires specialised expertise for
-                best results. Helps restore joint function and reduce pain. Ensures long-term joint stability.
-                Revision surgery restores confidence in joint movement and mobility.
-                Modern implants provide better durability and comfort.
-            </p>
-        </div>
-    </section>
+
 
     <!-- 6. Fracture Care & Trauma -->
     <section class="ortho-box reverse">
@@ -219,22 +204,7 @@
         </div>
     </section>
 
-    <!-- 10. Back & Neck Pain -->
-    <section class="ortho-box reverse">
-        <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
-        </div>
-        <div class="ortho-content">
-            <h3>Back Pain & Neck Pain Treatment</h3>
-            <p>
-                We treat muscle spasms, disc problems, posture issues and nerve compression causing back
-                or neck pain. Therapy includes medication, exercises and ergonomic guidance. Chronic pain
-                is managed with advanced techniques. Focus is on long-term comfort and spine health.
-                Lifestyle modifications improve spinal stability.
-                Strengthening therapies prevent repeated pain episodes.
-            </p>
-        </div>
-    </section>
+
 
     <!-- 11. Disc Problems -->
     <section class="ortho-box">
@@ -242,7 +212,7 @@
             <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
         </div>
         <div class="ortho-content">
-            <h3>Disc Problems</h3>
+            <h3>Disc Problems / Back Pain</h3>
             <p>
                 Disc bulges and herniations can cause nerve compression and radiating pain. Treatment includes
                 medication, physiotherapy and strengthening exercises. Minimally invasive procedures may be
@@ -270,23 +240,7 @@
         </div>
     </section>
 
-    <!-- 13. Complex Fractures -->
-    <section class="ortho-box">
-        <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
-        </div>
-        <div class="ortho-content">
-            <h3>Complex Fracture Treatment</h3>
-            <p>
-                Multiple fractures, joint-involving fractures and deformity-producing injuries need specialist
-                surgical care. We use modern fixation techniques to ensure proper bone alignment. Early
-                physiotherapy improves movement. These injuries require careful follow-up. Our goal is complete,
-                functional recovery.
-                Specialised implants ensure strong and stable healing.
-                Rehabilitation restores coordination and full motion.
-            </p>
-        </div>
-    </section>
+   
 
     <!-- 14. Ankle Ligament Injuries -->
     <section class="ortho-box reverse">
