--- a/index.html
+++ b/index.html
@@ -30,35 +30,49 @@
 
 
  
-  <header>
-    <div class="nav-container">
-        <div class="logo">
-      <img src="x.jpg" alt="Yamini Multi Speciality Hospital Logo">
-      </div>
+ <header>
+  <div class="nav-container">
 
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-      <li class="services-dropdown">
-  <a href="#" class="nav-link">Services ▾</a>
-
-  <div class="dropdown">
-    <ul>
-      <li><a href="paediatrics.html" class="service-item">Paediatrics & Neonatology</a></li>
-      <li><a href="orthopaedic.html" class="service-item">Orthopaedics</a></li>
-      <li><a href="gyn.html" class="service-item">Gynaecology & Obstetrics</a></li>
-      <li><a href="general.html" class="service-item">General Medicine </a></li>
-    </ul>
-  </div>
-</li>
-
-     <li><a href="contact.html">Contact Us</a></li>
-      
-      <li><a href="contact.html" class="btn-appointment-nav"> Book Appointment</a></li>
-    </ul>
-
+    <!-- LOGO -->
+    <div class="logo">
+      <img src="x.jpg" alt="Yamini MultiSpeciality Hospital">
     </div>
-  </header>
+
+    <!-- HAMBURGER ICON (MOBILE) -->
+    <div class="menu-toggle" id="menuToggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- NAV LINKS -->
+    <ul class="nav-links" id="navLinks">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+
+      <!-- SERVICES DROPDOWN -->
+      <li class="services-dropdown">
+        <a href="#">Services ▾</a>
+        <div class="dropdown">
+          <ul>
+            <li><a href="paediatrics.html" class="service-item">Paediatrics & Neonatology</a></li>
+            <li><a href="orthopaedic.html" class="service-item">Orthopaedics</a></li>
+            <li><a href="gyn.html" class="service-item">Gynaecology & Obstetrics</a></li>
+            <li><a href="general.html" class="service-item">General Medicine</a></li>
+          </ul>
+        </div>
+      </li>
+
+      <li><a href="contact.html">Contact Us</a></li>
+
+      <li>
+        <a href="contact.html" class="btn-appointment-nav">Book Appointment</a>
+      </li>
+    </ul>
+
+  </div>
+</header>
+
 
   
 
@@ -1470,6 +1484,29 @@
   
   <p class="footer-copy">©2025 | Yamini MultiSpeciality Hospital | All Rights Reserved</p>
 </footer>
+
+
+
+
+
+
+
+
+
+<script>
+  const menuToggle = document.getElementById("menuToggle");
+  const navLinks = document.getElementById("navLinks");
+
+  menuToggle.addEventListener("click", () => {
+    navLinks.classList.toggle("show");
+  });
+</script>
+
+
+
+
+
+
 
 </body>
 </html>
