--- a/general.html
+++ b/general.html
@@ -342,10 +342,18 @@
 
 
 <script>
-document.querySelector(".menu-toggle").onclick = function () {
-  document.querySelector(".nav-links").classList.toggle("active");
-};
+document.addEventListener("DOMContentLoaded", () => {
+  const toggle = document.querySelector(".menu-toggle");
+  const navLinks = document.querySelector(".nav-links");
+
+  if (toggle && navLinks) {
+    toggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  }
+});
 </script>
+
 </body>
 
 </html>
