--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
+<link rel="icon" type="image/jpg" href="x.jpg">
 
     <link rel="stylesheet" href="css/about.css">
 
@@ -214,7 +215,7 @@
   
     <div class="footer-box">
       <h3>QUICK LINKS</h3>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
