--- a/gyn.html
+++ b/gyn.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="icon" type="image/jpg" href="x.jpg">
 
 <link rel="stylesheet" href="css/gyn.css">
 
@@ -333,7 +334,7 @@
     
     <div class="footer-box">
       <h3>QUICK LINKS</h3>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
