--- a/gyn.html
+++ b/gyn.html
@@ -76,7 +76,7 @@
     <!-- 1. Menstrual Disorders -->
     <section class="gyn-box">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Menstrual Disorders 2.jpg" alt="">
         </div>
 
         <div class="gyn-content">
@@ -95,7 +95,7 @@
     <!-- 2. PCOS / PCOD -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/PCOD.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>PCOS / PCOD Management</h3>
@@ -112,7 +112,7 @@
     <!-- 3. Thyroid & High BP -->
     <section class="gyn-box">
         <div class="gyn-img">
-             <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+             <img src="img/gynecology/Thyroid.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Thyroid & High Blood Pressure</h3>
@@ -128,7 +128,7 @@
     <!-- 4. White Discharge -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/White discharge.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>White Discharge Treatment</h3>
@@ -145,7 +145,7 @@
     <!-- 5. Uterine Fibroids -->
     <section class="gyn-box">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Uterine Fibroids.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Uterine Fibroids</h3>
@@ -162,7 +162,7 @@
     <!-- 6. Ovarian Cyst -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Ovarian Cyst.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Ovarian Cyst Diagnosis & Treatment</h3>
@@ -178,7 +178,7 @@
     <!-- 7. Endometriosis -->
     <section class="gyn-box">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Endometriosis.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Endometriosis</h3>
@@ -195,7 +195,7 @@
     <!-- 8. Pelvic Pain -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Pelvic Pain.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Pelvic Pain Evaluation</h3>
@@ -212,7 +212,7 @@
     <!-- 9. Cervical Screening -->
     <section class="gyn-box">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Pap Smear.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Cervical Screening (Pap Smear)</h3>
@@ -228,7 +228,7 @@
     <!-- 10. Vaginal Infections -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
-             <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+             <img src="img/gynecology/Vaginal infection.jpg" alt="">
 
         </div>
         <div class="gyn-content">
@@ -246,9 +246,9 @@
 
 
     <!-- 12. Menopause Management -->
-    <section class="gyn-box reverse">
+    <section class="gyn-box ">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/Menopause.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Menopause Management</h3>
@@ -262,9 +262,9 @@
     </section>
 
     <!-- 13. High Risk Pregnancy -->
-    <section class="gyn-box">
+    <section class="gyn-box reverse">
         <div class="gyn-img">
- <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+ <img src="img/gynecology/high risk pregnancy.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>High-Risk Pregnancy Care</h3>
@@ -278,9 +278,9 @@
     </section>
 
     <!-- 14. Normal Delivery -->
-    <section class="gyn-box reverse">
+    <section class="gyn-box ">
         <div class="gyn-img">
-             <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+             <img src="img/gynecology/normal delivery.jpg" alt="">
         </div>
         <div class="gyn-content">
             <h3>Normal Delivery</h3>
@@ -298,7 +298,7 @@
     <!-- 16. C-Section -->
     <section class="gyn-box reverse">
         <div class="gyn-img">
-             <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=" alt="">
+             <img src="img/gynecology/Cesarean Section.jpg" alt="">
              </div>
         <div class="gyn-content">
             <h3>Cesarean Section (C-Section)</h3>
