--- a/orthopaedic.html
+++ b/orthopaedic.html
@@ -77,7 +77,7 @@
     <!-- 1. Trauma Management -->
     <section class="ortho-box">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Trauma.jpg">
         </div>
         <div class="ortho-content">
             <h3>Trauma Management</h3>
@@ -95,7 +95,7 @@
     <!-- 2. Total Knee Replacement -->
     <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/knee replacement.jpg">
         </div>
         <div class="ortho-content">
             <h3>Total Knee Replacement (TKR)</h3>
@@ -112,7 +112,7 @@
     <!-- 3. Total Hip Replacement -->
     <section class="ortho-box">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/hip replacement.jpg">
         </div>
         <div class="ortho-content">
             <h3>Total Hip Replacement (THR)</h3>
@@ -129,7 +129,7 @@
     <!-- 4. Shoulder Joint Replacement -->
     <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/shoulder replacement.jpg">
         </div>
         <div class="ortho-content">
             <h3>Shoulder Joint Replacement</h3>
@@ -146,9 +146,9 @@
 
 
     <!-- 6. Fracture Care & Trauma -->
-    <section class="ortho-box reverse">
+    <section class="ortho-box ">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/fracture.jpg">
         </div>
         <div class="ortho-content">
             <h3>Fracture Care & Trauma Management</h3>
@@ -163,9 +163,9 @@
     </section>
 
     <!-- 7. Arthritis Diagnosis & Treatment -->
-    <section class="ortho-box">
+    <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Arthritis.jpg">
         </div>
         <div class="ortho-content">
             <h3>Arthritis Diagnosis & Treatment</h3>
@@ -181,9 +181,9 @@
     </section>
 
     <!-- 8. Sports Injury Management -->
-    <section class="ortho-box reverse">
+    <section class="ortho-box ">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/sports injuries.jpg">
         </div>
         <div class="ortho-content">
             <h3>Sports Injuries Management</h3>
@@ -199,9 +199,9 @@
     </section>
 
     <!-- 9. Joint Pain Evaluation -->
-    <section class="ortho-box">
+    <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/joint pain.jpg">
         </div>
         <div class="ortho-content">
             <h3>Joint Pain Evaluation</h3>
@@ -220,7 +220,7 @@
     <!-- 11. Disc Problems -->
     <section class="ortho-box">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/ortho/back pain.jpg">
         </div>
         <div class="ortho-content">
             <h3>Disc Problems / Back Pain</h3>
@@ -237,7 +237,7 @@
     <!-- 12. Spine Fracture -->
     <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/spine fracture.jpg">
         </div>
         <div class="ortho-content">
             <h3>Spine Fracture Management</h3>
@@ -254,9 +254,9 @@
    
 
     <!-- 14. Ankle Ligament Injuries -->
-    <section class="ortho-box reverse">
+    <section class="ortho-box ">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/ortho/Ankle ligament.jpg">
         </div>
         <div class="ortho-content">
             <h3>Ankle Ligament Injuries</h3>
@@ -271,9 +271,9 @@
     </section>
 
     <!-- 15. Shoulder Dislocations -->
-    <section class="ortho-box">
+    <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Shoulder dislocations.jpg">
         </div>
         <div class="ortho-content">
             <h3>Shoulder Dislocations</h3>
@@ -288,9 +288,9 @@
     </section>
 
     <!-- 16. Wrist & Elbow Disorders -->
-    <section class="ortho-box reverse">
+    <section class="ortho-box ">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Wrist & elbow.jpg">
         </div>
         <div class="ortho-content">
             <h3>Wrist & Elbow Disorders</h3>
@@ -305,9 +305,9 @@
     </section>
 
     <!-- 17. Tendon, Ligament & Muscle Injury Care -->
-    <section class="ortho-box">
+    <section class="ortho-box reverse">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Tendon, Ligament.jpg">
         </div>
         <div class="ortho-content">
             <h3>Tendon, Ligament & Muscle Injury Care</h3>
@@ -323,9 +323,9 @@
     </section>
 
     <!-- 18. Osteoporosis Screening & Treatment -->
-    <section class="ortho-box reverse">
+    <section class="ortho-box ">
         <div class="ortho-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/Ortho/Osteoporosis.jpg">
         </div>
         <div class="ortho-content">
             <h3>Osteoporosis Screening & Treatment</h3>
