--- a/paediatrics.html
+++ b/paediatrics.html
@@ -75,7 +75,7 @@
     <!-- 1. NICU -->
     <section class="ped-box">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/NICU.jpg">
         </div>
         <div class="ped-content">
             <h3>NICU (Neonatal Intensive Care)</h3>
@@ -92,7 +92,7 @@
     <!-- 2. PICU -->
     <section class="ped-box reverse">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/PICU.jpg">
         </div>
         <div class="ped-content">
             <h3>PICU (Paediatric Intensive Care)</h3>
@@ -109,7 +109,7 @@
     <!-- 3. Newborn Care -->
     <section class="ped-box">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/New-born care.jpg">
         </div>
         <div class="ped-content">
             <h3>New-born Care</h3>
@@ -125,7 +125,7 @@
     <!-- 4. Jaundice Treatment -->
     <section class="ped-box reverse">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/Jaundice Treatment.jpg">
         </div>
         <div class="ped-content">
             <h3>Jaundice Treatment</h3>
@@ -141,7 +141,7 @@
     <!-- 5. Preterm Baby Care -->
     <section class="ped-box">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/Preterm baby care.jpg">
         </div>
         <div class="ped-content">
             <h3>Preterm Baby Care</h3>
@@ -157,7 +157,7 @@
     <!-- 6. Vaccination -->
     <section class="ped-box reverse">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/vaccination.jpg">
         </div>
         <div class="ped-content">
             <h3>Vaccination</h3>
@@ -173,7 +173,7 @@
     <!-- 7. Fever Cold Cough Flu -->
     <section class="ped-box">
         <div class="ped-img">
-            <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+            <img src="img/pediatric/fever.jpg">
         </div>
         <div class="ped-content">
             <h3>Fever, Cold, Cough & Flu</h3>
@@ -189,7 +189,7 @@
     <!-- 8. Asthma -->
     <section class="ped-box reverse">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/asthma.jpg" alt="Asthma Care">
         </div>
         <div class="ped-content">
             <h3>Asthma & Respiratory Problems</h3>
@@ -205,7 +205,7 @@
     <!-- 9. Skin Allergy -->
     <section class="ped-box">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/skin problem.jpg">
         </div>
         <div class="ped-content">
             <h3>Skin Allergy & Rashes</h3>
@@ -221,7 +221,7 @@
     <!-- 10. Stomach Problems -->
     <section class="ped-box reverse">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/Stomach Pain.jpg">
         </div>
         <div class="ped-content">
             <h3>Stomach Pain, Diarrhea & Vomiting</h3>
@@ -242,9 +242,9 @@
 
 
     <!-- 12. ENT -->
-    <section class="ped-box reverse">
+    <section class="ped-box ">
         <div class="ped-img">
-          <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+          <img src="img/pediatric/Throat Infections.jpg">
         </div>
         <div class="ped-content">
             <h3>Ear, Nose & Throat Infections</h3>
@@ -257,9 +257,9 @@
     </section>
 
     <!-- 13. Growth -->
-    <section class="ped-box">
+    <section class="ped-box reverse">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/Growth and development of a child.jpg">
         </div>
         <div class="ped-content">
             <h3>Growth & Development</h3>
@@ -273,9 +273,9 @@
     </section>
 
     <!-- 14. Seizures -->
-    <section class="ped-box reverse">
+    <section class="ped-box ">
         <div class="ped-img">
-          <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+          <img src="img/pediatric/headaches.jpg">
         </div>
         <div class="ped-content">
             <h3>Seizures, Headaches & Weakness</h3>
@@ -289,9 +289,9 @@
     </section>
 
     <!-- 15. Urinary -->
-    <section class="ped-box">
+    <section class="ped-box reverse">
         <div class="ped-img">
-          <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+          <img src="img/pediatric/urinary problem.jpg">
         </div>
         <div class="ped-content">
             <h3>Urinary & Kidney Problems</h3>
@@ -308,7 +308,7 @@
     <!-- 17. General Surgeries -->
     <section class="ped-box">
         <div class="ped-img">
-           <img src="https://media.istockphoto.com/id/482858629/photo/doctors-hospital-corridor-nurse-pushing-gurney-stretcher-bed.jpg?s=612x612&w=0&k=20&c=unfa1VMpYQGt3PyrkuvxN1JkX7FRk-w0knEFCqjTugg=">
+           <img src="img/pediatric/General paediatric surgeries.jpg">
         </div>
         <div class="ped-content">
             <h3>General Paediatric Surgeries</h3>
