--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <!-- 1 Trauma Management -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Trauma <br>Management</h5>
+            <h5>Trauma Management</h5>
             <img
               src="img/Ortho/Trauma.jpg"
               alt="Trauma Management">
@@ -767,7 +767,7 @@
         <!-- 3 Thyroid & High BP -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Thyroid & High BP</h5>
+            <h5>Thyroid & <br>High BP</h5>
             <img
               src="img/gynecology/Thyroid.jpg">
             <p>Evaluation and safe management of thyroid imbalance and blood pressure issues.</p>
@@ -789,7 +789,7 @@
         <!-- 5 Uterine Fibroids -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Uterine Fibroids</h5>
+            <h5>Uterine <br>Fibroids</h5>
             <img
               src="img/gynecology/Uterine Fibroids.jpg">
             <p>Diagnosis and medical or surgical treatment for fibroids causing bleeding or pain.</p>
@@ -974,7 +974,7 @@
         <!-- 6 Urinary Infection -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Urinary Infection (UTI)</h5>
+            <h5>Urinary  <br> Infection (UTI)</h5>
             <img
               src="img/general medicine/Urinary infection.jpg">
             <p>Diagnosis and care for UTI, burning urination and recurrent infections.</p>
@@ -996,7 +996,7 @@
         <!-- 8 Neuro Problems -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Neuro Problems</h5>
+            <h5>Neuro <br>Problems</h5>
             <img
               src="img/general medicine/Neuro problems.jpg">
             <p>Treatment for headaches,nerve issues & neurological conditions.</p>
@@ -1018,7 +1018,7 @@
         <!-- 10 Migraine -->
         <div class="col-md-3">
           <div class="service-card">
-            <h5>Migraine <br>Treatment</h5>
+            <h5>Migraine Treatment</h5>
             <img
               src="img/general medicine/Migraine.jpg">
             <p>Specialized care for severe headaches and stress-related migraines.</p>
